[package]
name = "async-executor"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v1.x.y" git tag
version = "1.5.1"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
rust-version = "1.48"
description = "Async executor"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/async-executor"
keywords = ["asynchronous", "executor", "single", "multi", "spawn"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[dependencies]
async-lock = "2.6"
async-task = "4.0.0"
concurrent-queue = "2.0.0"
fastrand = "1.3.4"
futures-lite = "1.11.0"
slab = "0.4.4"

[dev-dependencies]
async-channel = "1.4.1"
async-io = "1.1.9"
criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support"] }
easy-parallel = "3.1.0"
num_cpus = "1.13.0"
once_cell = "1.16.0"

[[bench]]
name = "executor"
harness = false
