[package]
name = "async-executor"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v1.x.y" git tag
version = "1.7.1"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
rust-version = "1.61"
description = "Async executor"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/async-executor"
keywords = ["asynchronous", "executor", "single", "multi", "spawn"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[dependencies]
async-lock = "3.0.0"
async-task = "4.0.0"
concurrent-queue = "2.0.0"
fastrand = "2.0.0"
futures-lite = { version = "2.0.0", default-features = false }
slab = "0.4.4"

[dev-dependencies]
async-channel = "2.0.0"
async-io = "2.1.0"
criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support"] }
easy-parallel = "3.1.0"
event-listener = "3.0.0"
fastrand = "2.0.0"
futures-lite = "2.0.0"
once_cell = "1.16.0"

[[bench]]
name = "executor"
harness = false
