[package]
name = "async-executor"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v2.x.y" git tag
version = "2.0.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>", "John Nunley <dev@notgull.net>"]
edition = "2021"
rust-version = "1.65"
description = "Async executor"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/async-executor"
keywords = ["asynchronous", "executor", "single", "multi", "spawn"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[features]
default = ["std"]
# Adds support for executors optimized for use in static variables.
static = []
# Note that disabling this feature doesn't yet work as expected,
# but is present anyways to reduce divergence between no-std forks of this.
std = [
    "async-task/std",
    "concurrent-queue/std",
    "fastrand/std",
    "slab/std",
]

[dependencies]
async-task = { version = "4.4.0", default-features = false }
concurrent-queue = { version = "2.5.0", default-features = false }
fastrand = { version = "2.0.0", default-features = false, features = ["alloc"] }
futures-lite = { version = "2.0.0", default-features = false }
pin-project-lite = "0.2"
slab = { version = "0.4.7", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
futures-lite = { version = "2.0.0", default-features = false, features = ["std"] }

[dev-dependencies]
async-channel = "2.0.0"
async-io = "2.1.0"
async-lock = "3.0.0"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
easy-parallel = "3.1.0"
fastrand = "2.0.0"
futures-lite = "2.0.0"
once_cell = "1.16.0"

[[bench]]
name = "executor"
harness = false
required-features = ["static"]

[package.metadata.docs.rs]
all-features = true
